# pybind11-test

./: .gitignore  CMakeLists.txt
src/: accumulator.h  main.cpp  module.cpp
test/: test.py
